--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -51,10 +51,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "StatsUtil.assign_rebound_chances_to_shots() got an unexpected keyword argument 'oreb_ppp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m true_point_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./../data/results/true_points.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m reb_chances_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./../data/results/reb_chances_full.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[43mStatsUtil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43massign_rebound_chances_to_shots\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrue_point_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreb_chances_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moreb_ppp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1.1025641025641026\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: StatsUtil.assign_rebound_chances_to_shots() got an unexpected keyword argument 'oreb_ppp'"
+     ]
+    }
+   ],
+   "source": [
+    "true_point_df = pd.read_csv('./../data/results/true_points.csv')\n",
+    "reb_chances_df = pd.read_csv('./../data/results/reb_chances_full.csv')\n",
+    "\n",
+    "StatsUtil.assign_rebound_chances_to_shots(true_point_df, reb_chances_df, oreb_ppp=1.1025641025641026)"
+   ]
   }
  ],
  "metadata": {
