--- a/notebooks/create_shot_charts.ipynb
+++ b/notebooks/create_shot_charts.ipynb
@@ -1,24 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from code.io.EventProcessor import EventProcessor\n",
-    "from code.io.TrackingProcessor import TrackingProcessor\n",
-    "from code.io.PossessionProcessor import PossessionProcessor\n",
-    "from code.io.ActionProcessor import ActionProcessor\n",
-    "\n",
-    "from code.util.StatsUtil import StatsUtil\n",
-    "from code.util.ShotRegionUtil import ShotRegionUtil\n",
-    "from code.util.VisUtil import VisUtil\n",
-    "from code.util.FeatureUtil import FeatureUtil\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "plt.rcParams['animation.ffmpeg_path'] = r'C:\\FFmpeg\\bin\\ffmpeg.exe'"
+    "# True Impact Shot Charting"
    ]
   },
   {
@@ -413,6 +399,24 @@
    "source": [
     "reb_chances_df = StatsUtil.assign_rebound_chances_to_shots(shot_rebound_classified_df, tracking_df, hexbin_region_data_df)\n",
     "reb_chances_df.to_csv('./../data/results/reb_chances.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_impact_points_classified_df = pd.read_csv('./../data/results/true_impact_points_classified.csv', dtype={'dReb': pd.BooleanDtype()})\n",
+    "\n",
+    "# Plot topographical heatmap using true impact points produced\n",
+    "VisUtil.plot_topographical_heatmap(true_impact_points_classified_df, weight_col=\"true_impact_points_produced\")\n",
+    "\n",
+    "# Plot topographical heatmap using points produced\n",
+    "VisUtil.plot_topographical_heatmap(true_impact_points_classified_df, weight_col=\"points_produced\")\n",
+    "\n",
+    "# Plot topographical heatmap using true points produced\n",
+    "VisUtil.plot_topographical_heatmap(true_impact_points_classified_df, weight_col=\"true_points_produced\")"
    ]
   }
  ],
