--- a/notebooks/create_shot_charts.ipynb
+++ b/notebooks/create_shot_charts.ipynb
@@ -4,31 +4,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# True Impact Shot Charting"
+    "# True Impact Shot Charting\n",
+    "\n",
+    "This notebook contains step-by-step code snippets to load and explore NBA tracking data as it relates to off rebounding/fastbreak scenario scoring impacts. Walk through the cells below to interact with the data, generate features, and produce results. All relevant code classes are pre-imported, and the source code can be found and manipulated under the 'code' directory in the repo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'EventProcessor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m GAME_ID \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0022300869\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Each source file has a dedicated processor class, use these to load and process src data\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m event_df \u001b[38;5;241m=\u001b[39m \u001b[43mEventProcessor\u001b[49m\u001b[38;5;241m.\u001b[39mload_game(GAME_ID)\n\u001b[0;32m      6\u001b[0m tracking_df \u001b[38;5;241m=\u001b[39m TrackingProcessor\u001b[38;5;241m.\u001b[39mload_game(GAME_ID)\n\u001b[0;32m      7\u001b[0m possession_df \u001b[38;5;241m=\u001b[39m PossessionProcessor\u001b[38;5;241m.\u001b[39mload_game(GAME_ID)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'EventProcessor' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "# Change this to any valid gameId in the source data\n",
     "GAME_ID = \"0022300869\"\n",
     "\n",
-    "event_df = EventProcessor.load_games()\n",
-    "tracking_df = TrackingProcessor.load_games()\n",
-    "possession_df = PossessionProcessor.load_games()"
+    "# Each source file has a dedicated processor class, use these to load and process src data\n",
+    "event_df = EventProcessor.load_game(GAME_ID)\n",
+    "tracking_df = TrackingProcessor.load_game(GAME_ID)\n",
+    "possession_df = PossessionProcessor.load_game(GAME_ID)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Begin by extracting and visualizing some data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# true_point_events = StatsUtil.calculate_true_points(event_df)\n",
-    "# true_point_events.to_csv('true_points.csv')\n",
-    "# true_point_events['true_points_produced'].value_counts()"
+    "anim = VisUtil(tracking_df)\n",
+    "anim.display_animation(possession_df.loc[possession_df[\"outcome\"] == \"FGM\"].iloc[0])"
    ]
   },
   {
@@ -46,6 +68,17 @@
     "# cross_half = FeatureUtil.find_ball_crossing_halfcourt(moment_df, possession.iloc[0][\"basketX\"])\n",
     "# in_zone_of_death = FeatureUtil.find_ball_moment(moment_df, FeatureUtil.is_in_zone_of_death, possession.iloc[0][\"basketX\"])\n",
     "# print(cross_3pt, cross_half, in_zone_of_death)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# true_point_events = StatsUtil.calculate_true_points(event_df)\n",
+    "# true_point_events.to_csv('true_points.csv')\n",
+    "# true_point_events['true_points_produced'].value_counts()"
    ]
   },
   {
