--- a/notebooks/create_shot_charts.ipynb
+++ b/notebooks/create_shot_charts.ipynb
@@ -7386,20 +7386,265 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Next, let's link the datasets together, and do some feature engineering to assess fastbreak defense"
+    "### 2. Next, let's link the datasets together, and take a look at some raw data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'timestamp': 1709430122560, 'x': 18.22, 'y': -13.94} {'timestamp': 1709430117960, 'x': -40.83, 'y': 0.59} {'timestamp': 1709430117960, 'x': -40.83, 'y': 0.59}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gameId</th>\n",
+       "      <th>playerId</th>\n",
+       "      <th>playerName</th>\n",
+       "      <th>teamId</th>\n",
+       "      <th>teamAbbr</th>\n",
+       "      <th>period</th>\n",
+       "      <th>wcTime</th>\n",
+       "      <th>gcTime</th>\n",
+       "      <th>scTime</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>gameDate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0022300869</td>\n",
+       "      <td>1631128</td>\n",
+       "      <td>Christian Braun</td>\n",
+       "      <td>1610612743</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1709430117960</td>\n",
+       "      <td>681.1</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>-13.21</td>\n",
+       "      <td>23.46</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0022300869</td>\n",
+       "      <td>1627750</td>\n",
+       "      <td>Jamal Murray</td>\n",
+       "      <td>1610612743</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1709430117960</td>\n",
+       "      <td>681.1</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>-32.87</td>\n",
+       "      <td>7.51</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0022300869</td>\n",
+       "      <td>203932</td>\n",
+       "      <td>Aaron Gordon</td>\n",
+       "      <td>1610612743</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1709430117960</td>\n",
+       "      <td>681.1</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>-20.65</td>\n",
+       "      <td>7.98</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0022300869</td>\n",
+       "      <td>1629008</td>\n",
+       "      <td>Michael Porter Jr.</td>\n",
+       "      <td>1610612743</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1709430117960</td>\n",
+       "      <td>681.1</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>-39.25</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0022300869</td>\n",
+       "      <td>203999</td>\n",
+       "      <td>Nikola Jokic</td>\n",
+       "      <td>1610612743</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1709430117960</td>\n",
+       "      <td>681.1</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>-44.23</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4791</th>\n",
+       "      <td>0022300869</td>\n",
+       "      <td>1630559</td>\n",
+       "      <td>Austin Reaves</td>\n",
+       "      <td>1610612747</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1709430135360</td>\n",
+       "      <td>663.7</td>\n",
+       "      <td>7.63</td>\n",
+       "      <td>27.94</td>\n",
+       "      <td>-6.26</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4792</th>\n",
+       "      <td>0022300869</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>LeBron James</td>\n",
+       "      <td>1610612747</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1709430135360</td>\n",
+       "      <td>663.7</td>\n",
+       "      <td>7.63</td>\n",
+       "      <td>43.28</td>\n",
+       "      <td>10.76</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4793</th>\n",
+       "      <td>0022300869</td>\n",
+       "      <td>1626156</td>\n",
+       "      <td>DAngelo Russell</td>\n",
+       "      <td>1610612747</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1709430135360</td>\n",
+       "      <td>663.7</td>\n",
+       "      <td>7.63</td>\n",
+       "      <td>15.79</td>\n",
+       "      <td>10.41</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4794</th>\n",
+       "      <td>0022300869</td>\n",
+       "      <td>203076</td>\n",
+       "      <td>Anthony Davis</td>\n",
+       "      <td>1610612747</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1709430135360</td>\n",
+       "      <td>663.7</td>\n",
+       "      <td>7.63</td>\n",
+       "      <td>36.27</td>\n",
+       "      <td>-7.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4795</th>\n",
+       "      <td>0022300869</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1709430135360</td>\n",
+       "      <td>663.7</td>\n",
+       "      <td>7.63</td>\n",
+       "      <td>42.11</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4796 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          gameId playerId          playerName      teamId teamAbbr  period  \\\n",
+       "0     0022300869  1631128     Christian Braun  1610612743      DEN       1   \n",
+       "1     0022300869  1627750        Jamal Murray  1610612743      DEN       1   \n",
+       "2     0022300869   203932        Aaron Gordon  1610612743      DEN       1   \n",
+       "3     0022300869  1629008  Michael Porter Jr.  1610612743      DEN       1   \n",
+       "4     0022300869   203999        Nikola Jokic  1610612743      DEN       1   \n",
+       "...          ...      ...                 ...         ...      ...     ...   \n",
+       "4791  0022300869  1630559       Austin Reaves  1610612747      LAL       1   \n",
+       "4792  0022300869     2544        LeBron James  1610612747      LAL       1   \n",
+       "4793  0022300869  1626156     DAngelo Russell  1610612747      LAL       1   \n",
+       "4794  0022300869   203076       Anthony Davis  1610612747      LAL       1   \n",
+       "4795  0022300869      NaN                 NaN          -1      NaN       1   \n",
+       "\n",
+       "             wcTime  gcTime  scTime      x      y     z    gameDate  \n",
+       "0     1709430117960   681.1   24.00 -13.21  23.46   0.0  2024-03-02  \n",
+       "1     1709430117960   681.1   24.00 -32.87   7.51   0.0  2024-03-02  \n",
+       "2     1709430117960   681.1   24.00 -20.65   7.98   0.0  2024-03-02  \n",
+       "3     1709430117960   681.1   24.00 -39.25   1.33   0.0  2024-03-02  \n",
+       "4     1709430117960   681.1   24.00 -44.23   1.12   0.0  2024-03-02  \n",
+       "...             ...     ...     ...    ...    ...   ...         ...  \n",
+       "4791  1709430135360   663.7    7.63  27.94  -6.26   0.0  2024-03-02  \n",
+       "4792  1709430135360   663.7    7.63  43.28  10.76   0.0  2024-03-02  \n",
+       "4793  1709430135360   663.7    7.63  15.79  10.41   0.0  2024-03-02  \n",
+       "4794  1709430135360   663.7    7.63  36.27  -7.10   0.0  2024-03-02  \n",
+       "4795  1709430135360   663.7    7.63  42.11   3.00  10.1  2024-03-02  \n",
+       "\n",
+       "[4796 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -7412,18 +7657,37 @@
     "moment_df = TrackingProcessor.extract_moment_from_timestamps(tracking_df, start, end)\n",
     "possession = PossessionProcessor.extract_possession_by_timestamp(possession_df, end)\n",
     "\n",
-    "# Now we can generate our features\n",
-    "cross_3pt = FeatureUtil.find_ball_crossing_far_three_point_line(moment_df, possession[\"basketX\"])\n",
-    "cross_half = FeatureUtil.find_ball_crossing_halfcourt(moment_df, possession[\"basketX\"])\n",
-    "in_zone_of_death = FeatureUtil.find_ball_moment(moment_df, FeatureUtil.is_in_zone_of_death, possession[\"basketX\"])\n",
-    "print(cross_3pt, cross_half, in_zone_of_death)"
+    "moment_df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Now that we are comfortable with the data, let's set up our shot regions"
+    "### 3. Now that we are comfortable with the data, let's use our FeatureUtil to engineer some transition defense features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'timestamp': 1709430122560, 'x': 18.22, 'y': -13.94} {'timestamp': 1709430117960, 'x': -40.83, 'y': 0.59} {'timestamp': 1709430117960, 'x': -40.83, 'y': 0.59}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now we can generate our features\n",
+    "cross_3pt = FeatureUtil.find_ball_crossing_far_three_point_line(moment_df, possession[\"basketX\"])\n",
+    "cross_half = FeatureUtil.find_ball_crossing_halfcourt(moment_df, possession[\"basketX\"])\n",
+    "in_zone_of_death = FeatureUtil.find_ball_moment(moment_df, FeatureUtil.is_in_zone_of_death, possession[\"basketX\"])\n",
+    "\n",
+    "# Here, our FeatureUtil uses a set of boolean methods applied using vectorization to extract relevant game event timestamps\n",
+    "print(cross_3pt, cross_half, in_zone_of_death)"
    ]
   },
   {
@@ -7482,6 +7746,13 @@
     "\n",
     "# Here is what that distribution looks like across all regions\n",
     "VisUtil.plot_court_hexmap(shot_rebound_classified_df, 'rebound_x', 'rebound_y')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. We have classified shot data and rebound distributions. Next, we need a way to quantify the geospatial features of the court at the shot time to project which team has the best rebounding chances. We use Voroni cell diagrams to accomplish this"
    ]
   },
   {
@@ -7561,9 +7832,7 @@
     }
    ],
    "source": [
-    "shot_rebound_classified_df = pd.read_csv('./../data/results/shot_rebound_classified.csv')\n",
-    "hexbin_region_data_df = pd.read_csv('./../data/results/rebound_hexmap_distributions.csv')\n",
-    "\n",
+    "# \n",
     "possession = shot_rebound_classified_df.iloc[0]\n",
     "moment_df = TrackingProcessor.extract_moment_from_timestamps(tracking_df, possession['wcStart'], possession['wcEnd'])\n",
     "print(moment_df)\n",
